[project]
name = "py-py"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.0",
    "pandas>=2.3.3",
    "rich>=14.2.0",
    "seaborn>=0.13.2",
]

[tool.uv.workspace]
members = [
    "trading-analyzer",
    "data_analyser",
]
